--- a/configure-prod-server.yml
+++ b/configure-prod-server.yml
@@ -16,7 +16,7 @@
     command: sudo docker rm -f my-banking
 
   - name: Deploy Docker Container
-    command: docker run -itd -p 8081:8081 --name my-banking geetha0914/banking-app:1.0
+    command: docker run -itd -p 8081:8081 --name my-banking geetha0914/banking-application:1.0
 	
 	
 	
